<resources>
    <string name="app_name">Pocket Pointer</string>
    <string name="available_devices">Available Devices</string>
    <string name="bluetooth_devices">Bluetooth Devices</string>
    <string name="calibrate">calibrate</string>
    <string name="connect_to_device">Connect to Device</string>
    <string name="devices_toolbar">Bluetooth Devices</string>
    <string name="disconnect_device">Disconnect</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="textview1">""</string>
    <string name="textview2">Acceleration</string>
    <string name="execute">Send Test Messages</string>
    <string name="title_activity_presentation_mode">PresentationModeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="button_nextslide">Next</string>
    <string name="button_prevslide">Previous</string>
    <string name="button_hidescreen">Hide</string>
    <string name="button_gotopresentation">Presentation Mode</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pocket Pointer</string>
    <string name="nav_header_subtitle">""</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="not_connected">No connected device</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Mouse Mode</string>
    <string name="menu_presentation">Presentation Mode</string>
    <string name="menu_touchpad">Touchpad Mode</string>
    <string name="menu_mousemode">Mouse mode</string>
    <string name="title_activity_touchpad">Touchpad</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="touchpad_bgtext">TOUCHPAD</string>
    <string name="touchpad_corner_contentdesc">Defines boundaries of touchpad</string>
    <string name="menu_overrideVolumeKeys">Volume override</string>
    <string name="tag_fragment_presentation">presentation</string>
    <string name="navdrawer_item_button_connect_device">Connect device</string>
    <string name="navdrawer_item_button_disconnect_device">Disconnect device</string>

    <string name="empty_string">""</string>
    <string name="menu_browserlock">Browser Mode</string>

</resources>
