<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/fragments"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_laptop_black_24dp"
            android:title="@string/menu_home"/>

        <item
            android:id="@+id/nav_presentation"
            android:icon="@drawable/ic_present_to_all_black_24dp"
            android:title="@string/menu_presentation" />
        <item
            android:id="@+id/nav_touchpad"
            android:icon="@drawable/ic_touch_app_black_24dp"
            android:title="@string/menu_touchpad" />

    </group>

    <group
        android:id="@+id/quick_settings"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_switch_mousemode"
            android:icon="@drawable/touchpad_ic_mouse_blue_24dp"
            android:title="@string/menu_mousemode"
            app:actionLayout="@layout/menu_switch_mousemode"/>
        <item
            android:id="@+id/nav_switch_override_volume_keys"
            android:icon="@drawable/menu_ic_volume_override_white_24dp"
            android:title="@string/menu_overrideVolumeKeys"
            app:actionLayout="@layout/menu_switch_override_volume_keys" />
    </group>

    <group
        android:id="@+id/connection_buttons"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_button_connect_device"
            android:title="@string/empty_string"
            app:actionLayout="@layout/menu_button_connect_device"/>

        <item
            android:id="@+id/nav_button_disconnect_device"
            android:title="@string/empty_string"
            app:actionLayout="@layout/menu_button_disconnect_device"/>
    </group>
</menu>
