<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/fragments"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/touchpad_ic_mouse_blue_24dp"
            android:iconTint="@android:color/white"
            android:title="@string/menu_mouse"/>

        <item
            android:id="@+id/nav_presentation"
            android:icon="@drawable/ic_present_to_all_black_24dp"
            android:title="@string/menu_presentation" />
        <item
            android:id="@+id/nav_touchpad"
            android:icon="@drawable/ic_touch_app_black_24dp"
            android:title="@string/menu_touchpad" />

    </group>

    <group
        android:id="@+id/quick_settings"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_switch_mousemode"
            android:icon="@drawable/ic_movingcursor"
            android:title="@string/menu_touchpad_cursor"
            app:actionLayout="@layout/navdrawer_menu_switch_mousemode"/>
        <item
            android:id="@+id/nav_switch_override_volume_keys"
            android:icon="@drawable/menu_ic_volume_override_white_24dp"
            android:title="@string/menu_overrideVolumeKeys"
            app:actionLayout="@layout/navdrawer_menu_switch_override_volume_keys"/>
        <item
            android:id="@+id/nav_item_calibrate"
            android:title="@string/empty_string"
            android:icon="@drawable/home_ic_vibration_white_24dp"
            app:actionLayout="@layout/navdrawer_menu_button_calibrate"/>
        <item
            android:id="@+id/nav_progressbar_calibrate"
            android:title="@string/calibrate"
            android:icon="@drawable/home_ic_vibration_white_24dp"
            app:actionLayout="@layout/navdrawer_menu_progressbar_calibrating"/>
    </group>

</menu>
